# ALL_PROJECTS

./: .gitignore  Iris_summary.md  README.md  agents.md  ai_project_summary.md  detailed_digs.md
.claude/: settings.local.json
Iris_2.0/: README.md  agent.md  compression_pipeline.py  main.py  run.py  system_prompt.txt
MCP_PROJECT/: README.md
ai_system/: ARCHITECTURE.md  README.md  SPEC.v2.md  project_scope.md  requirements.txt
bob_2/: README.md  agent.md  notes.md  test_backend.py  test_wiki.py  thalamus.py
landing/: Dockerfile  build_log.txt  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
mt/: README.md  RSS.md  draft.md  dreamstates.md  emergent_voice.md  mirror_trap.md  ntdraft.md  recursive_state.md
mtg_core/: README.md  ai_broker.py  ai_live.py  ai_pregame.py  dpg_ui.py  engine.py  game_state.py  run_game.py
mtg_web/: index.html  package-lock.json  package.json
rag/: Dockerfile  api.py  corpus.py  ingest.py  list_models.py  requirements.txt
resume/: Bradley_R_Bates_WotC_Resume.docx  gen_steve_res.docx  openai_res.docx  resume_2.17.docx  resume_2.17.txt  resume_2.17_b.docx  resume_agentic_ai.docx  resume_agentic_ai.txt  resume_ai_cs.docx  wotc.txt
rulesbot/: README.md  parse_rules.py  pyproject.toml  rules.json  server.py
rulesbot/.claude/: settings.local.json
t-scan/: baseline_hooks.py  camera.gd  dim_poke.py  log_eval.py  main.tscn  monolith_circuits.py  mri_hero.py  noderender.gd  prompts.py  readme.md
tscan_2_tscan_harder/: README.md  agent.py  current_interp.md  exp.md  flet_cat.py  fletcher.txt  h.txt  (+4 more)
(+8151 files in other folders)
